# lssvr

./: LICENSE  README.md  mycycle.csv  pyproject.toml  teste.py  teste2.py
lssvr/: __init__.py  lssvr.py
tests/: teste.py
