[tool.poetry]
name = "lssvr"
version = "0.1.0"
description = ""
authors = ["José Alberth <jalberth14@gmail.com>", "Madson Dias <madsonddias@gmail.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/zealberth/lssvr"
repository = "https://github.com/zealberth/lssvr"
keywords = ["machine-learning", "data-science", "lssvr", "regression"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
scikit-learn = "^0.23.2"
scipy = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"